<resources>

    <string name="app_name">黑马TV</string>
    <string name="recommend">推荐</string>
    <string name="live">直播</string>
    <string name="game">游戏</string>
    <string name="mine">我的</string>
    <string name="delete">删除</string>
    <string name="live_channel_title">直播——%s</string>
    <string name="start_time">0:00</string>

    <!-- toast string -->
    <string name="danmaku_connection_failed">连接弹幕服务器失败！</string>
    <string name="danmaku_login_failed">登录弹幕服务器失败！</string>
    <string name="danmaku_send_too_fast">发送弹幕速度太快！</string>
    <string name="subscribe_need_login">订阅频道需要登录哦！</string>
    <string name="need_login_hint">需要登录哦！</string>
    <string name="need_data_hint">还没数据哦！</string>

    <!-- danmaku related -->
    <string name="danmaku_edittext_hint">请输入您要发送的弹幕</string>

    <!-- fragmen recommend -->
    <string name="fragment_recommend_game_title_yxlm">英雄联盟</string>
    <string name="fragment_recommend_game_title_dota2">DOTA2</string>
    <string name="fragment_recommend_game_title_lscs">炉石传说</string>
    <string name="fragment_recommend_game_title_zjyx">主机游戏</string>

    <!-- fragment my -->
    <string name="fragment_my_click_to_login">点击登录</string>
    <string name="fragment_my_fav">我的关注</string>
    <string name="fragment_my_information">我的资料</string>
    <string name="fragment_my_history">观看历史</string>
    <string name="fragment_my_setting">设置选项</string>
    <string name="fragment_my_about">关于我们</string>

    <!-- setting activity -->
    <string name="setting_activity_system_setting">系统设置</string>
    <string name="setting_activity_decode_by_hardware">硬件解码</string>
    <string name="setting_activity_auto_play_in_23G">2G/3G自动播放视频</string>
    <string name="setting_activity_danmaku_setting">弹幕设置</string>
    <string name="setting_activity_danmaku_setting_alpha">弹幕透明度</string>
    <string name="modify_password">修改密码</string>
    <string name="feedback"><u>意见反馈</u></string>

    <!-- login activity -->
    <string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">退出登录</string>
    <string name="login_username_is_empty">账号为空，请输入账号！</string>
    <string name="login_username_is_error">账号格式错误，请输入正确的邮箱地址！</string>
    <string name="login_password_is_empty">密码为空，请输入密码！</string>
    <string name="login_password_is_error">密码错误，请重试！</string>
    <string name="verify_password_hint">请确认密码</string>
    <string name="register_email_hint">请输入邮箱</string>
    <string name="confirm_password_is_error">两次输入密码错误，请重新输入！</string>
    <string name="register_email_is_empty">邮箱为空，请输入邮箱地址！</string>
    <string name="register_email_is_error">邮箱错误，请重新输入！</string>
    <string name="email_title_with_gap">邮\u0020箱</string>
    <string name="password_title_with_gap">密\u0020码</string>
    <string name="gender_title_with_gap">性\u0020别</string>
    <string name="change_btn_title_with_gap"><u>更改</u></string>
    <string name="information_activity_get_user_info_error">获取用户资料失败！</string>
    <string name="information_activity_title">我的资料</string>
    <string name="information_activity_fans">粉丝：%s</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <!-- fav activity -->
    <string name="select_all">批量选择</string>
    <string name="confirm_delete">确认删除</string>

    <!-- history activity -->
    <string name="history_dialog_title">你确定要删除吗？</string>
    <string name="history_dialog_bt_ok">确定</string>
    <string name="history_dialog_bt_cancel">取消</string>

    <!-- video activity -->
    <string name="open_danmaku">打开弹幕</string>
    <string name="close_danmaku">关闭弹幕</string>
    <string name="screen_scale_type_16x9">16:9</string>
    <string name="screen_scale_type_auto">自适应</string>
    <string name="screen_scale_type_full">全屏</string>
    <!-- crop -->
    <string name="crop__saving">保存照片...</string>
    <string name="crop__wait">请等待...</string>
    <string name="crop__pick_error">没找到图片</string>
    <string name="crop__done">完成</string>
    <string name="crop__cancel">取消</string>
    <!-- feedback -->
	<string name="feedback_submit">提交</string>
</resources>