<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/setting_activity_system_setting"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/et_qqNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center|start"
                android:text="@string/setting_activity_decode_by_hardware" />

            <com.wanke.ui.widget.SwitchSeekBar
                android:id="@+id/SwitchSeekBar"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:max="100"
                android:maxHeight="30dp"
                android:minHeight="30dp"
                android:progress="0"
                android:progressDrawable="@drawable/progress_bar_bg"
                android:thumb="@drawable/progress_bar_thumb_bg"
                android:thumbOffset="-8dip" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center|start"
                android:text="@string/setting_activity_auto_play_in_23G" />

            <com.wanke.ui.widget.SwitchSeekBar
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:max="100"
                android:maxHeight="30dp"
                android:minHeight="30dp"
                android:progress="0"
                android:progressDrawable="@drawable/progress_bar_bg"
                android:thumb="@drawable/progress_bar_thumb_bg"
                android:thumbOffset="-8dip" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/danmaku_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:text="@string/setting_activity_danmaku_setting"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center|start"
            android:text="@string/setting_activity_danmaku_setting_alpha" />

        <SeekBar
            android:id="@+id/danmaku_alpha_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/setting_change_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center|start"
        android:text="@string/modify_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:autoLink="web"
        android:text="@string/feedback"
        android:textSize="18sp"
        android:textColor="@color/text_blue_color"
        android:textStyle="bold" />

</LinearLayout>