<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/account_avatar_bg"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/account_bg"
            android:orientation="vertical"
            android:gravity="center_vertical" >
    
            <ImageView
                android:id="@+id/my_login"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/default_avatar"
                android:contentDescription="@null" />
    
            <TextView
                android:visibility="gone"
                android:id="@+id/my_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fragment_my_click_to_login"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:gravity="center" >
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/login_username_indicator"
                android:contentDescription="@null" />
    
            <EditText
                android:id="@+id/register_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="16sp"
                android:hint="@string/login_username_hint"
                android:inputType="textPersonName" />
            
            <ImageView
                android:id="@+id/delete_username_input_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/editext_delete_btn_bg"
                android:contentDescription="@null" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:gravity="center" >
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/email_indicator"
                android:contentDescription="@null" />
            
            <EditText
                android:id="@+id/register_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:gravity="center" >
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/login_password_indicator"
                android:contentDescription="@null" />
            
            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:gravity="center" >
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/login_password_indicator"
                android:contentDescription="@null" />
            
            <EditText
                android:id="@+id/verify_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/verify_password_hint"
                android:inputType="textPassword" />
        </LinearLayout>
        
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/register"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>