<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/recomment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_activity_bottom_panel_recommend_btn"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tv_view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recommend"
                android:textColor="#222222"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/live_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_activity_bottom_panel_lives_btn"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tv_view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/live"
                android:textColor="#222222"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/game_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_activity_bottom_panel_games_btn"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tv_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/game"
                android:textColor="#222222"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_activity_bottom_panel_account"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mine"
                android:textColor="#222222"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>